--- a/style.css
+++ b/style.css
@@ -1,113 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@400&display=swap');
 
-body {
-  background-color: hsl(0, 0%, 95%);
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  font-size: 15px;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.container {
-  max-width: 960px;
-  margin: 0 auto;
+header{
+    width: 100%;
+    background-color: rgb(17, 29, 48 );
+    position: fixed;
+    top: 0;
+    padding: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+header a{
+    color: white;
+    margin-left: 100px;
 }
 
-.card {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  border-radius: 12px;
-  margin: 2rem;
-  overflow: hidden;
-}
-
-.box1{
-  background-color: hsl(31, 77%, 52%);
-}
-
-.box2{
-  background-color: hsl(184, 100%, 22%);
-}
-
-.box3{
-  background-color: hsl(179, 100%, 13%);
-}
-
-
-.box{
-  padding: 40px;
+/* .blink {
+    animation: blink 3s infinite;
+  }
   
-}
-.box h2{
-  text-transform: uppercase;
-  color: hsl(0, 0%, 95%);
-  font-size: 30px;
-  font-family: 'Big Shoulders Display', cursive;
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+      color: blue;
+    }
+  } */
 
-}
-
-.box p{
-  color: hsla(0, 0%, 100%, 0.75);
-  line-height: 1.6;
-  font-family: 'Lexend Deca', sans-serif;
-}
-
-.box a{
-  text-decoration: none;
-  background-color: hsl(0, 0%, 95%);
-  padding: 13px 27px;
-  border-radius: 26px;
-  margin-top: 60px;
-  display: inline-block;
-  font-family: 'Lexend Deca', sans-serif;
-  border: 2px solid hsl(0, 0%, 95%);
-  transition: all .4s ease-in-out;
+main{
+    margin-top:150px;
 }
 
-.box1 a{
-  color: hsl(31, 77%, 52%);
+.cars {
+    display: flex;
+    width: 60%;
+    margin: 100px auto;
+    height: auto;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-.box2 a{
-  color: hsl(184, 100%, 22%);
+img {
+    width: 50px;
+    height: auto;
+    padding-bottom: 18px;
 }
 
-.box3 a{
-  color: hsl(179, 100%, 13%);
+
+.sedans {
+    width: calc(1/3 * 100%);
+    background-color: hsl(31, 77%, 52%);
+    padding: 2em;
 }
 
-.box1 a:hover{
-  color: hsl(0, 0%, 95%);
-  background-color: hsl(31, 77%, 52%);
+.suvs {
+    width: calc(1/3 * 100%);
+    background-color: hsl(184, 100%, 22%);
+    padding: 2em;
 }
 
-.box2 a:hover{
-  color: hsl(0, 0%, 95%);
-  background-color: hsl(184, 100%, 22%);
+.luxury {
+    width: calc(1/3 * 100%);
+    background-color: hsl(179, 100%, 13%);
+    padding: 2em;
 }
 
-.box3 a:hover{
-  color: hsl(0, 0%, 95%);
-  background-color: hsl(179, 100%, 13%);
+.sedans h1,
+.suvs h1,
+.luxury h1 {
+    font-family: 'Big Shoulders Display', cursive;
+    padding-bottom: 15px;
+    color: hsla(0, 0%, 100%, 0.75);
 }
 
-.box4 a {
-  color : #454587;
+.sedans p,
+.suvs p,
+.luxury p {
+    font-family: 'Lexend Deca', sans-serif;
+    color: hsl(0, 0%, 95%);
+    font-size: 15px;
+    height: 100px;
+    margin-bottom: 70px;
 }
 
-.box4 a:hover{
-  color: hsl(0, 0%, 95%);
-  background-color: #454587;
+.sedans button,
+.suvs button,
+.luxury button {
+    font-family: 'Lexend Deca', sans-serif;
+    padding-bottom: 20px;
+    padding: 9px 20px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 10px;
 }
 
-@media only screen and (max-width: 768px) {
-  .card{
-    grid-template-columns: 1fr;
-  }
+.sedans button {
+    color: hsl(31, 77%, 52%);
+    background-color: white;
 }
 
-@media only screen and (max-width: 425px) {
-  .card{
-    margin: .5rem;
-  }
+.suvs button {
+    color: hsl(184, 100%, 22%);
+    background-color: white;
+}
+
+.luxury button {
+    color: hsl(179, 100%, 13%);
+    background-color: white;
+}
+
+.sedans button:hover {
+    background-color: hsl(31, 77%, 52%);
+    color: hsl(0, 0%, 100%);
+    border: 2px solid white;
+}
+
+.suvs button:hover {
+    background-color: hsl(184, 100%, 22%);
+    color: white;
+    border: 2px solid white;
+}
+
+.luxury button:hover {
+    background-color: hsl(179, 100%, 13%);
+    color: white;
+    border: 2px solid white;
+}
+
+
+
+/* MEDIA QUERIES */
+@media (min-width: 1520px) {
+    .cars {
+        width: 50%;
+    }
+}
+
+@media (max-width: 1160px) {
+    .cars {
+        width: 70%;
+    }
+}
+
+@media (max-width: 960px) {
+    .cars {
+        width: 80%;
+    }
+}
+
+@media (max-width: 840px) {
+    .cars {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    .cars {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .sedans,
+    .suvs,
+    .luxury {
+        width: 100%;
+    }
+
+    .sedans p,
+    .suvs p,
+    .luxury p {
+        height: 70px;
+        margin-bottom: 15px;
+    }
 }
